@@ -109,12 +109,12 @@ public abstract class MessageContextJAXWS extends CommonMessageContext implement
       if (outbound == null)
          throw new IllegalStateException("Cannot find property: " + MessageContext.MESSAGE_OUTBOUND_PROPERTY);
 
-      MessageContextAssociation.popMessageContext();
+      MessageContextAssociation.popMessageContext(false);
       SOAPMessageContextJAXWS resContext = new SOAPMessageContextJAXWS(reqContext);
       resContext.setSOAPMessage(null);
 
       // Reverse the direction
-      resContext.put(MessageContext.MESSAGE_OUTBOUND_PROPERTY, new Boolean(!outbound));
+      resContext.put(MessageContext.MESSAGE_OUTBOUND_PROPERTY, Boolean.valueOf(!outbound));
 
       MessageContextAssociation.pushMessageContext(resContext);
       cleanupAttachments(reqContext);
